--- a/src/client/Dockerfile
+++ b/src/client/Dockerfile
@@ -12,6 +12,9 @@ RUN npm ci --only=production
 # Copy the rest of the application
 COPY . .
 
+# Build Next.js application for production
+RUN npm run build
+
 EXPOSE 3000
 
 CMD ["npm", "run", "start"]
