--- a/src/client/Dockerfile
+++ b/src/client/Dockerfile
@@ -1,10 +1,10 @@
 # client/Dockerfile
-FROM node:20.15.0-slim
+FROM node:20-alpine
 
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY package.json package-lock.json ./
 
 # Install dependencies
 RUN npm ci --only=production
