--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.15",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "next": "14.2.15",
     "react": "^18",
@@ -22,8 +23,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
