--- a/src/client/package.json
+++ b/src/client/package.json
@@ -12,7 +12,9 @@
     "@tanstack/react-query": "^5.59.15",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "css-loader": "^7.1.2",
     "next": "14.2.15",
+    "postcss-loader": "^8.1.1",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^5.0.0"
