--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,8 +1,11 @@
 FROM python:3.12-slim
 
+# Set the working directory
 WORKDIR /app
 
+# Install necessary system dependencies and clean up afterwards to reduce image size
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
     gcc \
     python3-dev \
     libpq-dev \
@@ -10,11 +13,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
+# Copy and install Python dependencies from requirements.txt
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir --default-timeout=1000 -r requirements.txt
 
+# Copy the rest of the application code
 COPY . /app
 
-EXPOSE 8000
-
+# Run the FastAPI application with Uvicorn
 CMD ["uvicorn", "server.main:app", "--host", "0.0.0.0", "--port", "8000"]
