--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -1,7 +1,7 @@
 accelerate==1.0.1
 aiocache==0.12.3
 aiohappyeyeballs==2.4.3
-aiohttp>=3.8,<3.9
+aiohttp==3.8.4
 aiosignal==1.3.1
 alembic==1.13.3
 annotated-types==0.7.0
