--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -21,4 +21,4 @@ RUN pip install --no-cache-dir --default-timeout=1000 -r requirements.txt
 COPY . /app
 
 # Run the FastAPI application with Uvicorn
-CMD ["uvicorn", "app.__init__:app"]
+CMD ["uvicorn", "app.__init__:app", "--host", "0.0.0.0", "--port", "8000"]
