--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -3,14 +3,14 @@
   "builds": [
     {
       "src": "app/__init__.py",
-      "use": "@vercel/python",
-      "install": [
-        "apt-get update && apt-get install -y --no-install-recommends build-essential gcc python3-dev libpq-dev postgresql-client",
-        "pip install --no-cache-dir -r requirements.txt"
-      ],
-      "start": "uvicorn app.__init__:app --host 0.0.0.0 --port 8000"
+      "use": "@vercel/python"
     }
   ],
+  "install": [
+    "apt-get update && apt-get install -y --no-install-recommends build-essential gcc python3-dev libpq-dev postgresql-client",
+    "pip install --no-cache-dir -r requirements.txt"
+  ],
+  "start": "uvicorn app.__init__:app --host 0.0.0.0 --port 8000",
   "routes": [
     {
       "src": "/(.*)",
