--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -2,14 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/Dockerfile",
-      "use": "@vercel/docker"
+      "src": "app/__init__.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "app/__init__.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHONPATH": ".",
+    "PORT": "8000"
+  }
 }
